--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,9 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 0 0% 9.8%;;
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card-foreground: 0 0% 11.5%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 240 5.9% 10%;
@@ -33,9 +33,9 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 0 0% 9.8%;
     --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
+    --card: 0 0% 11.5%;
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
@@ -57,7 +57,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --bar-default: 25 47% 95%;
+    --bar-default: 240 100% 98.6%;
   }
 }
 
@@ -82,6 +82,7 @@
 }
 .sorted-line-color {
   background: theme("colors.system.barsorted");
+
 }
 
 @keyframes pulse {
